# duckdb-substrait-extension

./: .dockerignore  CMakeLists.txt  DOCKER_BUILD.md  Dockerfile.local.optimized  UPGRADING_DUCKDB.md  build_extension_docker_local_optimized.sh  build_extension_macos.sh
.github/workflows/: build-extension.yml
cmake/: dependencies.cmake
src/: from_substrait.cpp.backup  from_substrait_ast.cpp  substrait_extension.cpp  to_substrait.cpp
src/include/: from_substrait.hpp  from_substrait_ast.hpp  substrait_extension.hpp  to_substrait.hpp
test/c/: test_projection.cpp
test/sql/: ast_roundtrip_validation.test  test_advanced_joins.test  test_advanced_subqueries.test  test_aggregate_filter_roundtrip.test  test_aggregate_over_project.test  test_clickbench.test  test_datetime_functions.test  test_grouping_extensions.test  test_join.test  test_literals.test  test_string_functions.test  test_substrait_tpcds.test  test_window_functions.test
